--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,121 @@
-body {
+body,
+html,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+ul,
+ol,
+li,
+dl,
+dt,
+dd,
+header,
+menu,
+section,
+p,
+input,
+td,
+th,
+ins {
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-size: 100%;
+  margin: 0 !important;
+}
+
+li,
+s {
+  list-style: none;
+}
+
+body,
+textarea,
+select,
+input,
+button {
+  font-size: 12px !important;
+  color: #333 !important;
+  font-family: Arial, Helvetica, sans-serif;
+  -webkit-text-size-adjust: none;
+}
+
+html,
+body {
+  width: 100%;
+  height: 100%;
+  border: 0;
+  word-wrap: break-word;
+  word-break: break-word;
+  overflow: hidden;
+}
+body {
+  *zoom: 1;
+  min-width: 982px;
+  background: #f5f5f5;
+  text-align: center;
+}
+
+a {
+  text-decoration: none;
+  color: #333;
+}
+
+em, i {
+  font-style: normal;
+  text-align: left;
+  font-size: inherit;
+}
+
+img, .txt {
+  border: 0;
+}
+
+input:focus, textarea:focus, span:focus, a:focus, button:focus {
+  outline: none;
+}
+
+.m-top .logo,
+.m-nav .cor,
+.m-nav .hot,
+.m-srch .srchbg,
+.m-mail,
+.m-tophead,
+.m-topvd {
+  background: url("./assets/images/topbar.png") no-repeat 0 9999px;
+}
+
+.f-cb {
+  zoom: 1;
+}
+
+.f-cb:after {
+  clear: both;
+  content: ".";
+  display: block;
+  height: 0;
+  visibility: hidden;
+}
+
+.f-pr {
+  position: relative;
+  zoom: 1;
+}
+
+.f-pa{
+  position: absolute;
+}
+
+.f-r-white-icon{
+  background: url('./assets/images/white-r-icon@3x.png');
 }
