--- a/src/index.css
+++ b/src/index.css
@@ -57,13 +57,14 @@ body {
   border: 0;
   word-wrap: break-word;
   word-break: break-word;
-  overflow: hidden;
 }
 body {
   *zoom: 1;
   min-width: 982px;
   background: #f5f5f5;
   text-align: center;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 a {
@@ -71,17 +72,27 @@ a {
   color: #333;
 }
 
-em, i {
+a:hover {
+  text-decoration: underline;
+}
+
+em,
+i {
   font-style: normal;
   text-align: left;
   font-size: inherit;
 }
 
-img, .txt {
+img,
+.txt {
   border: 0;
 }
 
-input:focus, textarea:focus, span:focus, a:focus, button:focus {
+input:focus,
+textarea:focus,
+span:focus,
+a:focus,
+button:focus {
   outline: none;
 }
 
@@ -112,10 +123,10 @@ input:focus, textarea:focus, span:focus, a:focus, button:focus {
   zoom: 1;
 }
 
-.f-pa{
+.f-pa {
   position: absolute;
 }
 
-.f-r-white-icon{
-  background: url('./assets/images/white-r-icon@3x.png');
+.f-r-white-icon {
+  background: url("./assets/images/white-r-icon@3x.png");
 }
