--- a/src/pages/DiscoverCom/index.scss
+++ b/src/pages/DiscoverCom/index.scss
@@ -15,9 +15,6 @@
   border-width: 0 1px;
 }
 
-.g-bd1 {
-  background: url("../../assets/images/wrap1.png") repeat-y 100% 100%;
-}
 .g-mn1 {
   float: left;
   width: 100%;
@@ -37,7 +34,33 @@
 .n-disk li {
   background: url("../../assets/images/index.png") no-repeat 0 9999px;
 }
-
+.s-bg-8 {
+  background-position: -300px -75px;
+}
+.s-bg-8:hover {
+  background-position: -320px -75px;
+}
+.s-bg-7 {
+  background-position: -260px -75px;
+}
+.s-bg-7:hover {
+  background-position: -280px -75px;
+}
+.s-bg-9 {
+  background-position: -267px -205px;
+}
+.s-bg-9:hover {
+  background-position: -267px -235px;
+}
+.s-bg-10 {
+  background-position: -300px -205px;
+}
+.s-bg-10:hover {
+  background-position: -300px -235px;
+}
+.g-bd1 {
+  background: url("../../assets/images/wrap1.png") repeat-y 100% 100%;
+}
 .v-hd2 {
   height: 33px;
   padding: 0 10px 0 34px;
@@ -213,6 +236,192 @@ a.s-fc3:hover {
   }
 }
 
+.u-cover-4 {
+  width: 80px;
+  height: 80px;
+  .msk {
+    background-position: -145px -57px;
+  }
+}
+
+.u-cover-alb1 {
+  width: 100px;
+  height: 100px;
+  .msk {
+    width: 118px;
+    height: 100px;
+    background-position: 0 -570px;
+  }
+}
+.u-cover-0 .icon-play,
+.u-cover-alb1 .icon-play,
+.u-cover-10 .icon-play,
+.u-cover-11 .icon-play,
+.u-cover-12 .icon-play {
+  left: 72px;
+  width: 22px;
+  height: 22px;
+  background-position: 0 -85px;
+  _background-position: 0 0;
+}
+.u-cover-alb1 .icon-play,
+.u-cover-alb2 .icon-play,
+.u-cover-alb3 .icon-play {
+  display: none;
+  _display: block;
+}
+
+.u-cover-alb1:hover .icon-play,
+.u-cover-alb2:hover .icon-play,
+.u-cover-alb3:hover .icon-play {
+  display: block;
+}
+
+.u-cover-0 .icon-play:hover,
+.u-cover-alb1 .icon-play:hover,
+.u-cover-10 .icon-play:hover,
+.u-cover-11 .icon-play:hover,
+.u-cover-12 .icon-play:hover {
+  background-position: 0 -110px;
+  _background-position: 0 0;
+}
+
 .n-new {
   margin: 0px 0 0px;
+}
+
+.n-disk {
+  position: relative;
+  zoom: 1;
+  height: 186px;
+  margin: 20px 0 37px;
+  border: 1px solid #d3d3d3;
+  .inner {
+    height: 184px;
+    padding-left: 16px;
+    background: #f5f5f5;
+    border: 1px solid #fff;
+  }
+  .pre {
+    left: 4px;
+  }
+  .nxt {
+    right: 4px;
+  }
+  .pre,
+  .nxt {
+    position: absolute;
+    top: 71px;
+    width: 17px;
+    height: 17px;
+    cursor: pointer;
+  }
+  .roll {
+    float: left;
+    width: 645px;
+    height: 180px;
+    overflow: hidden;
+  }
+  ul {
+    position: absolute;
+    top: 0;
+    width: 645px;
+    margin: 28px 0 0 0;
+  }
+  li {
+    float: left;
+    display: inline;
+    width: 118px;
+    height: 150px;
+    margin-left: 11px;
+    background-position: -260px 100px;
+  }
+  .u-cover {
+    margin-bottom: 7px;
+  }
+
+  p {
+    width: 90%;
+    line-height: 18px;
+  }
+}
+
+.n-blist {
+  background: url("../../assets/images/index_bill.png") no-repeat;
+  height: 472px;
+  margin-top: 20px;
+  padding-left: 1px;
+  .blk {
+    float: left;
+    width: 230px;
+  }
+  .blk-1 {
+    width: 228px;
+  }
+  .top {
+    height: 100px;
+    padding: 20px 0 0 19px;
+  }
+  .cver {
+    float: left;
+    display: inline;
+  }
+  .tit {
+    float: left;
+    width: 116px;
+    margin: 6px 0 0 10px;
+    h3 {
+      width: 100%;
+      text-align: left;
+    }
+  }
+  .btn {
+    margin-top: 10px;
+    i {
+      display: block;
+      float: left;
+      width: 22px;
+      height: 22px;
+      margin-right: 10px;
+      text-indent: -9999px;
+      cursor: pointer;
+    }
+  }
+  ol {
+    height: 319px;
+    margin-left: 50px;
+    line-height: 32px;
+    li {
+      height: 32px;
+      &.js-dis .nm {
+        color: #bbb;
+      }
+    }
+    .no {
+      float: left;
+      position: relative;
+      width: 35px;
+      height: 32px;
+      margin-left: -35px;
+      text-align: center;
+      color: #666;
+      font-size: 16px;
+    }
+    .no-top {
+      color: #c10d0c;
+    }
+    .nm {
+      float: left;
+      width: 170px;
+      height: 32px;
+      text-align: left;
+    }
+  }
+  .more {
+    clear: both;
+    height: 32px;
+    margin-right: 32px;
+    text-align: right;
+    line-height: 32px;
+}
 }
