--- a/src/pages/DiscoverCom/index.scss
+++ b/src/pages/DiscoverCom/index.scss
@@ -1,128 +1,5 @@
-.g-bd,
-.g-bd1,
-.g-bd2,
-.g-bd3,
-.g-bd4,
-.g-bd5,
-.g-bd6,
-.g-bd7 {
-  width: 980px;
-  min-height: 700px;
-  _height: 700px;
-  margin: 0 auto;
-  background-color: #fff;
-  border: 1px solid #d3d3d3;
-  border-width: 0 1px;
-}
-
-.g-mn1 {
-  float: left;
-  width: 100%;
-  margin-right: -250px;
-}
-
-.g-mn1c {
-  margin-right: 251px;
-}
-
-.g-wrap3 {
-  padding: 20px 20px 40px;
-}
-
-.s-bg,
-.v-hd2,
-.n-disk li {
-  background: url("../../assets/images/index.png") no-repeat 0 9999px;
-}
-.s-bg-8 {
-  background-position: -300px -75px;
-}
-.s-bg-8:hover {
-  background-position: -320px -75px;
-}
-.s-bg-7 {
-  background-position: -260px -75px;
-}
-.s-bg-7:hover {
-  background-position: -280px -75px;
-}
-.s-bg-9 {
-  background-position: -267px -205px;
-}
-.s-bg-9:hover {
-  background-position: -267px -235px;
-}
-.s-bg-10 {
-  background-position: -300px -205px;
-}
-.s-bg-10:hover {
-  background-position: -300px -235px;
-}
-.g-bd1 {
-  background: url("../../assets/images/wrap1.png") repeat-y 100% 100%;
-}
-.v-hd2 {
-  height: 33px;
-  padding: 0 10px 0 34px;
-  background-position: -225px -156px;
-  border-bottom: 2px solid #c10d0c;
-  .tit {
-    float: left;
-    font-size: 20px;
-    font-weight: normal;
-    line-height: 28px;
-  }
-  .tab {
-    float: left;
-    margin: 7px 0 0 20px;
-    .line {
-      margin: 0 10px;
-      color: #ccc;
-    }
-  }
-  .more {
-    float: right;
-    margin-top: 9px;
-    _margin-top: 11px;
-  }
-}
-
-.v-hd2 .more .cor,
-.v-hd3 .more .cor {
-  display: inline-block;
-  width: 12px;
-  height: 12px;
-  margin-left: 4px;
-  vertical-align: middle;
-}
-.s-fc0,
-a.s-fc0:hover {
-  color: #000;
-}
-
-.s-fc3,
-a.s-fc3:hover {
-  color: #666;
-}
-a.s-fc3:hover {
-  text-decoration: underline;
-}
-
-.f-tdn,
-.f-tdn:hover {
-  text-decoration: none;
-}
-
-.f-ff2 {
-  font-family: "Microsoft Yahei", Arial, Helvetica, sans-serif;
-}
-
 .n-rcmd .m-cvrlst {
   margin: 20px 0 0 -42px;
-}
-
-.s-bg-6 {
-  background-position: 0 -240px;
 }
 
 .m-cvrlst li {
@@ -138,6 +15,7 @@ a.s-fc3:hover {
     max-width: 100%;
     _width: 100%;
     vertical-align: middle;
+    text-align: left;
   }
   p {
     width: 100%;
@@ -155,135 +33,6 @@ a.s-fc3:hover {
     height: 204px;
     padding-left: 42px;
   }
-}
-
-.u-cover .bottom,
-.u-cover .msk,
-.n-musicsd .lst .avatar .msk {
-  background: url("../../assets/images/coverall.png") no-repeat;
-}
-
-.u-cover .ply,
-.u-cover .icon-headset,
-.u-cover .icon-play,
-.u-face .msk,
-.n-note .head .msk,
-.icn-vip,
-.icn-daren,
-.u-checkbox {
-  background: url("../../assets/images/iconall.png") no-repeat;
-}
-
-.u-cover .icon-headset,
-.u-cover .icon-play {
-  display: inline-block;
-}
-
-.u-cover {
-  position: relative;
-  display: block;
-  img {
-    display: block;
-    width: 100%;
-    height: 100%;
-  }
-  .msk {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-  }
-  .bottom {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 27px;
-    background-position: 0 -537px;
-    color: #ccc;
-  }
-  .icon-play {
-    position: absolute;
-    right: 10px;
-    bottom: 5px;
-    width: 16px;
-    height: 17px;
-    background-position: 0 0;
-    cursor: pointer;
-    &:hover {
-      background-position: 0 -60px;
-    }
-  }
-  .icon-headset {
-    float: left;
-    width: 14px;
-    height: 11px;
-    background-position: 0 -24px;
-    margin: 9px 5px 9px 10px;
-  }
-  .nb {
-    float: left;
-    margin: 7px 0 0 0;
-  }
-}
-
-.u-cover-1 {
-  width: 140px;
-  height: 140px;
-  .msk {
-    background-position: 0 0;
-  }
-}
-
-.u-cover-4 {
-  width: 80px;
-  height: 80px;
-  .msk {
-    background-position: -145px -57px;
-  }
-}
-
-.u-cover-alb1 {
-  width: 100px;
-  height: 100px;
-  .msk {
-    width: 118px;
-    height: 100px;
-    background-position: 0 -570px;
-  }
-}
-.u-cover-0 .icon-play,
-.u-cover-alb1 .icon-play,
-.u-cover-10 .icon-play,
-.u-cover-11 .icon-play,
-.u-cover-12 .icon-play {
-  left: 72px;
-  width: 22px;
-  height: 22px;
-  background-position: 0 -85px;
-  _background-position: 0 0;
-}
-.u-cover-alb1 .icon-play,
-.u-cover-alb2 .icon-play,
-.u-cover-alb3 .icon-play {
-  display: none;
-  _display: block;
-}
-
-.u-cover-alb1:hover .icon-play,
-.u-cover-alb2:hover .icon-play,
-.u-cover-alb3:hover .icon-play {
-  display: block;
-}
-
-.u-cover-0 .icon-play:hover,
-.u-cover-alb1 .icon-play:hover,
-.u-cover-10 .icon-play:hover,
-.u-cover-11 .icon-play:hover,
-.u-cover-12 .icon-play:hover {
-  background-position: 0 -110px;
-  _background-position: 0 0;
 }
 
 .n-new {
@@ -343,6 +92,7 @@ a.s-fc3:hover {
   p {
     width: 90%;
     line-height: 18px;
+    text-align: left;
   }
 }
 
@@ -423,5 +173,126 @@ a.s-fc3:hover {
     margin-right: 32px;
     text-align: right;
     line-height: 32px;
+  }
 }
+
+.n-myinfo {
+  height: 165px;
+  padding-top: 20px;
+  .note {
+    width: 205px;
+    margin: 0 auto;
+    padding: 16px 0;
+    line-height: 22px;
+  }
+  .btn {
+    display: block;
+    width: 100px;
+    height: 31px;
+    line-height: 31px;
+    text-align: center;
+    color: #fff;
+    text-shadow: 0 1px 0 #8a060b;
+    cursor: pointer;
+    &:hover {
+      color: #fff;
+    }
+  }
+}
+
+.n-myinfo-1 {
+  height: 126px;
+  padding-top: 0;
+  .btn {
+    margin: 0 auto;
+  }
+}
+
+.n-singer {
+  margin-top: 15px;
+}
+.n-enter li,
+.n-enter .itm {
+  float: left;
+  width: 210px;
+  height: 62px;
+  background: #fafafa;
+}
+
+.n-enter {
+  margin: 6px 0 14px 20px;
+  text-align: left;
+  li {
+    margin-top: 14px;
+  }
+  .head,
+  .head img {
+    float: left;
+    width: 62px;
+    height: 62px;
+  }
+  .itm * {
+    cursor: pointer;
+  }
+  .itm:hover {
+    background: #f4f4f4;
+  }
+  .ifo {
+    float: left;
+    width: 133px;
+    height: 60px;
+    padding-left: 14px;
+    border: 1px solid #e9e9e9;
+    border-left: none;
+  }
+  h4 {
+    margin-top: 8px;
+  }
+  p {
+    width: 90%;
+    margin-top: 8px;
+  }
+}
+
+.n-dj-1 {
+  margin-top: 30px;
+}
+
+.n-hotdj {
+  margin: 20px 0 0 20px;
+  li {
+    float: left;
+    width: 210px;
+    height: 50px;
+  }
+  .cver {
+    float: left;
+    width: 40px;
+    margin-right: 10px;
+    img {
+      width: 40px;
+      height: 40px;
+      box-shadow: 0 0 1px #333333 inset;
+    }
+  }
+  .info {
+    float: left;
+    width: 160px;
+    line-height: 21px;
+    text-align: left;
+    .u-icn {
+      margin-top: -1px;
+      *margin-top: -2px;
+    }
+  }
+  p {
+    width: 100%;
+  }
+  .nm-icn {
+    display: inline-block;
+    *display: inline;
+    zoom: 1;
+    max-width: 88%;
+    vertical-align: middle;
+  }
 }
