--- a/src/pages/DiscoverCom/banner.scss
+++ b/src/pages/DiscoverCom/banner.scss
@@ -6,23 +6,38 @@
   background: url("../../assets/images/banner.png") 0 9999px no-repeat;
 }
 .n-ban {
-  background: rgb(123, 182, 177);
+  background: rgb(152, 175, 175);
   .wrap {
     position: relative;
     width: 982px;
-    height: 336px;
+    height: 370px;
     margin: 0 auto;
   }
   .ban {
     width: 982px;
-    height: 336px;
+    height: 370px;
     z-index: 10;
-    img {
-      display: block;
-      width: 730px;
-      height: 336px;
-      -webkit-backface-visibility: hidden;
+    a.d-flag {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      transition: opacity 0.5s;
+      &.active {
+        opacity: 1;
+      }
+      &.lev {
+        opacity: 0;
+      }
+      img {
+        display: block;
+        width: 982px;
+        height: 370px;
+        -webkit-backface-visibility: hidden;
+      }
     }
+
     .btnl,
     .btnr {
       display: block;
@@ -54,9 +69,9 @@
     }
     .dots {
       position: absolute;
-      top: 310px;
+      top: 335px;
       left: 0;
-      width: 730px;
+      width: 982px;
       height: 20px;
       text-align: center;
       .pg {
